# sdl2_vulkan

./: .gitignore  CMakeLists.txt  main.cpp
cmake/: FindGLM.cmake
scripts/macOS/: genxcode.sh
scripts/windows/: build.cmd  run.cmd
sdl2_vulkan/: CMakeLists.txt  SDLUtils.h  VulkanSurface.h  VulkanUtils.h  frag.frag  main.cpp  pch.h  vert.vert
